feat: Integrate RAG chatbot with Docusaurus frontend and FastAPI backend
This commit introduces the full integration of the RAG chatbot system.
It covers:

- **FastAPI Backend Integration (feat/006-fastapi-rag-integration):**
  - Implemented a FastAPI server (\ackend/main.py\) to expose \/chat\ endpoint.
  - Enabled communication with the RAG agent (\ackend/agent.py\).
  - Addressed and resolved \ModuleNotFoundError\ by structuring \ackend\ as a Python package and fixing import paths.
  - Fixed asynchronous execution issues (\AgentRunner.run_sync\ vs \wait Runner.run\) for agent invocation within FastAPI.
  - Ensured robust environment variable handling for API keys.
  - Added CORS middleware for frontend access.
  - Created integration tests for the \/chat\ endpoint.
  - Updated \ackend/README.md\ with setup and usage instructions.

- **Docusaurus Chatbot UI Integration (feat/007-chatbot-ui-integration):**
  - Created a new React component \ChatbotWidget\ within \src/components/ChatbotWidget/\.
  - Implemented core chatbot UI elements: message display, input field, send button, and collapsible toggle.
  - Styled components using CSS Modules for a clean, non-intrusive design.
  - Integrated \ChatbotWidget\ into the Docusaurus global layout (\src/theme/Layout/index.js\) via swizzling, making it visible on all pages.
  - Enabled client-side conversation history management and loading indicators.
  - Added basic ARIA attributes for improved accessibility.

- **General Improvements & Housekeeping:**
  - Consolidated \gent.py\ and \etrieve.py\ into the \ackend/\ directory for better organization.
  - Updated specification and plan documents for both features.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,12 @@ __pycache__/
 venv/
 dist/
 *.egg-info/
+
+# Gemini CLI temporary files
+.gemini/tmp/
+
+# Backend environment variables
+backend/.env
+
+# Top-level environment variables
+.env
